--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ img {
 	row-gap: var(--gutter);
 }
 
-.row > * {
+.hero .row > * {
 	padding: 0 calc(var(--gutter) * 0.5);
 }
 
@@ -334,3 +334,62 @@ img {
         text-align: start;
     }
 }
+
+
+/* WHY US */
+
+.why-us .row > * {
+	padding: 0 calc(var(--gutter) * 0.5);
+}
+
+.why-us {
+    background-color: var(--lilac);
+}
+
+.why-us__header {
+    padding: 50px 0px;
+}
+
+.why-us__header > h2 {
+    text-align: center;
+}
+
+.why-us .card  {
+    background-color: white;
+    border-radius: 25px;
+    padding: 25px;
+}
+
+.why-us .card > h2, h3 {
+    color: var(--lilac);
+}
+
+.why-us__list {
+    font-size: 100px;
+}
+
+.why-us_title {
+    font-size: 40px;
+}
+
+.why-us .button--lilac {
+    color: white;
+    display: inline-block;
+}
+
+.why-us .card > * {
+    padding: 10px 0px;
+}
+
+@media (min-width: 768px) {
+    .col-md-6 {
+        width: calc(6 * 100% / 12);
+    }
+}
+
+@media (min-width: 992px) {
+    .col-lg-4 {
+        width: calc(4 * 100% / 12);
+    }
+}
+
